--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,13 +20,24 @@ services:
     volumes:
       - .:/app/
   db:
-    image: postgres:latest
-    restart: always
-    environment:
-        - POSTGRES_DB=${DB_NAME}
-        - POSTGRES_USER=${DB_USER}
-        - POSTGRES_PASSWORD=${DB_PASSWORD}
+    build:
+      context: .
+      dockerfile: docker/db/Dockerfile
     ports:
-        - 5432:5432
-    volumes:
-        - ./docker/postgres/:/docker-entrypoint-initdb.d/
+      - "5432:5432"
+    networks:
+      - pg-network
+  
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pg-admin2
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@wdpai.pl
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    networks:
+      - pg-network
+  
+networks:
+  pg-network:
