--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,8 @@ services:
     image: dpage/pgadmin4:latest
     container_name: pg-admin2
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@wdpai.pl
-      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_DEFAULT_EMAIL: mpilarski8@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: admin123
     ports:
       - "5050:80"
     networks:
